entrega da atividade 05.05.2023

--- a/anaandrade/index.html
+++ b/anaandrade/index.html
@@ -6,4 +6,11 @@
         <h1>Ana Andrade</h1>
     </body>
     <p>Eu Amo animais, faço alfajores deliciosos</p>
+    <div>
+        <h2>Alana</h2>
+        <h2>Ana Beatriz</h2>
+        <h2>Greta
+        <h2>Guilherme</h2>
+        <h2>Any gabrieli</h2>
+    </div>
 </html>
