--- a/anaandrade/index.html
+++ b/anaandrade/index.html
@@ -1,16 +1,73 @@
 <html>
-    <head>
-        <title>Ana Andrade</title>
-    </head>
-    <body>
-        <h1>Ana Andrade</h1>
-    </body>
-    <p>Eu Amo animais, faço alfajores deliciosos</p>
-    <div>
-        <h2>Alana</h2>
-        <h2>Ana Beatriz</h2>
-        <h2>Greta
-        <h2>Guilherme</h2>
-        <h2>Any gabrieli</h2>
-    </div>
+
+<head>
+    <title>Ana Andrade</title>
+    <style>
+        .analinda-roxo {
+            color: rgb(128, 0, 255);
+        }
+
+        .alana- {
+
+            color: #e100ff;
+        }
+
+        .anabeatriz- {
+            color: blue;
+        }
+
+        .greta- {
+            color: burlywood;
+        }
+
+        .guilherme- {
+            color: green;
+        }
+
+        .anygabrieli- {
+            color: salmon;
+        }
+        .julia-{
+            color: blueviolet;
+        }
+        .rafaela-{
+            color: pink;
+        }
+        .mariavitoria-A{
+            color: purple;
+        }
+        .matheus-{
+            color: red;
+        }
+        p {
+            color:red;
+        }
+        #meu-id {
+            color:aquamarine;
+        }
+    </style>
+</head>
+
+<body>
+
+    <h1 id= "nome-aluno">Ana Andrade</h1>
+    <p style="color:rgb(89, 143, 224)">Eu Amo animais, faço alfajores deliciosos</p>
+    <p>equipe do primerito trimestre</p>
+    <ul>
+        <li class="alana-">Alana</li>
+        <li class="anabeatriz-">Ana Beatriz</li>
+        <li class="greta-">Greta</li>
+        <li class="guilherme-">Guilherme</li>
+        <li class="anygabrieli-">Any gabrieli</li>
+    </ul>
+    <p>equipe segundo trimestre</p>
+    <ul>
+        <li class="julia-">julia-</li>
+        <li class="rafaela-">Rafaela</li>
+        <li class="mariavitoria-">Maria Vitoria</li>
+        <li class="guilherme-">Guilherme</li>
+        <li class="matheus-">Matheus</li>
+    </ul>
+</body>
+
 </html>
